Fix safari layout issues.

--- a/styles/portfolio-style.css
+++ b/styles/portfolio-style.css
@@ -58,8 +58,8 @@
 .portfolio-display iframe {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  /* -o-object-fit: contain; */
+  /* object-fit: contain; */
   border: none;
 }
 
@@ -68,8 +68,10 @@
   text-decoration: none;
   color: rgb(32, 32, 32);
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   position: relative;
+  letter-spacing: -0.04rem;
+  font-weight: 400;
 }
 
 .portfolio-project-link::after {
@@ -80,11 +82,11 @@
   height: 5px;
   width: 100%;
   -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
 
   -webkit-transform-origin: left;
 
-          transform-origin: left;
+  transform-origin: left;
   -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
 }
@@ -92,7 +94,7 @@
 .portfolio-project-link:hover::after {
   background-color: #28a745;
   -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
 }
 
 @media screen and (max-width: 520px) {
