--- a/styles/style.css
+++ b/styles/style.css
@@ -25,11 +25,11 @@ html {
 }
 
 a {
-  font-family: var(--ff-sans-alt);
+  font-family: var(--ff-sans-main);
 }
 
 .logo-container {
-  min-height: 10%;
+  height: 10%;
   min-width: 90%;
   /* background-color: red; */
   position: absolute;
@@ -40,9 +40,7 @@ a {
   margin-left: 1rem;
 
   display: -webkit-box;
-
   display: -ms-flexbox;
-
   display: flex;
 
   /* transition events */
@@ -61,7 +59,7 @@ a {
   margin-left: 0.6rem;
   font-size: 1.7rem;
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: 500;
   letter-spacing: -0.1rem;
   color: rgb(172, 64, 64);
 }
@@ -164,19 +162,15 @@ a {
   -webkit-text-decoration: transparent;
   text-decoration: transparent;
   color: rgb(32, 32, 32);
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.6rem;
   text-transform: uppercase;
-  letter-spacing: 0.02rem;
+  letter-spacing: -0.02rem;
   margin-right: 1rem;
 
   /* transition: all 0.2s linear;
   padding-bottom: 0.3em; */
   position: relative;
-}
-
-.navbar-link a:active {
-  color: red;
 }
 
 .navbar-link a::after {
